--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,4 +24,19 @@
   .post-content h3{
     @apply text-xl font-bold py-4;
   }
+  .contact-form label{
+    @apply block w-full mb-4;
+  }
+  .contact-form input,
+  .contact-form textarea{
+    @apply block border border-gray-300 focus:outline-none
+    focus:ring focus:ring-green-500 focus:ring-offset-2
+    w-full mb-4 p-2 rounded;
+  }
+  .contact-form button{
+    @apply inline-block bg-green-500 focus:outline-none
+    focus:ring focus:ring-white focus:ring-offset-2
+    mb-4 px-3 py-2 text-white text-xl hover:bg-green-600
+    active:bg-green-700 rounded focus:ring-opacity-50;
+  }
 }
